prom/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: prom
  name: prometheus-prom
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    app: prometheus
    prometheus: prom
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
